--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -1,20 +1,20 @@
-
 {% load static %}
 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Codedaddies List</title>
+    <title>Dan's List</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
 <nav>
     <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">Codedaddies List</a>
+        <a href="/" class="brand-logo">Dan's List</a>
         <ul id="nav-mobile" class="right">
             <li><a href="/">Home</a></li>
         </ul>
@@ -22,7 +22,7 @@
 </nav>
 
 <div class="container">
-    <h1 style="text-align: center">What do you want to search for on Codedaddies List?</h1>
+    <h1 style="text-align: center">What do you want to search for on Dan's List?</h1>
     <div class="row">
         <div class="col s4">
             <!-- Promo Content 1 goes here -->
